overflow fix

--- a/_css/main.css
+++ b/_css/main.css
@@ -28,6 +28,9 @@ html,body{
    height:100%;
    width:100%;
  }
+ body{
+	overflow-x: hidden;
+ }
 *{
   	font-family: "proxima-nova",sans-serif;
 	z-index: 1;
@@ -585,7 +588,6 @@ body{
 	width:100%;
 	margin-left:30%;
 	text-align:center;
-	
 }
 
 
